<resources>
    <string name="app_name">type2锁_锁厂</string>

    <!--扫一扫-->
    <string name="qc_code_close">Close</string>
    <string name="qr_code_auto_scan_notification">point to QR on bike</string>
    <string name="qr_code_notification">Hint</string>
    <string name="qr_code_camera_not_open">Turn on camera\"setting>privacy>camera\"set</string>
    <string name="qr_code_positive_button_know">Get it</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Can’t read the link~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry,can’t read the content</string>
    <string name="qr_code_camera_not_found">Camera undetected</string>


    <string name="scan_device">Device list</string>
    <string name="refresh">Refresh</string>
    <string name="Searching">Searching...</string>
    <string name="search_over">Search end</string>
    <string name="connect_status">Connect status"：</string>
    <string name="device_version">Device version</string>
    <string name="battery">Power：</string>
    <string name="current_cz">Current operation：</string>
    <string name="open_count">Unlocking time：</string>
    <string name="Open">Unlock</string>

    <string name="auto_open">Auto Unlock</string>
    <string name="lock_status">Receive lock status</string>
    <string name="reset_lock">Reset／Lock</string>
    <string name="wx_auth">WeChat authorization</string>
    <string name="mts">Smart lock</string>
    <string name="ys">Padlock</string>
    <string name="Lock_success">Current:lock success</string>
    <string name="Lock_timeout">Current:lock overtime</string>
    <string name="opened">Current: unlocked</string>
    <string name="closeed">Current:locked</string>
    <string name="reset_fail">Current: reset failed</string>
    <string name="reset_success">Current: reset success</string>
    <string name="open_success">Current: unlock success</string>
    <string name="open_fail">Current: unlock failed</string>
    <string name="battery_success">Current: receive power success</string>
    <string name="battery_fail">Current: receive power failed</string>
    <string name="loading">loading...</string>
    <string name="is_empty">mac or QR can’t be empty</string>
    <string name="gsm_version">GSM version：</string>
    <string name="gsm_id">GSM ID：</string>
    <string name="lock_ip">Lock IP：</string>
    <string name="lock_domain">Lock domain name：</string>
    <string name="work_mode">Work status：</string>
    <string name="iccid">ICCID：</string>
    <string name="set_mode">Set transportation mode</string>
    <string name="work_status">Work status</string>
    <string name="gsm_info">GSM info</string>
    <string name="get_domian">Get domain name</string>
    <string name="get_ip">Get IP</string>
    <string name="get_iccid">Get iccid</string>
    <string name="mode_fail">Current：set mode fail</string>
    <string name="mode_ok">Current：set mode ok</string>
    <string name="connect_fail">Current：connect fail</string>
    <string name="disconnect_dk">Current：disconnect</string>
    <string name="no_search">Current：No device found</string>
    <string name="search_device">Current：Find the device</string>
    <string name="start_connect">Current：Initiate connection...</string>
    <string name="connect_ok">Current：connection succeeded</string>
    <string name="connected">Connection Status：connected</string>
    <string name="started_serach">Current：Start searching...</string>
    <string name="work_model">Operating mode：</string>
    <string name="device_version_number">Current firmware version：</string>
    <string name="lock_damin">Lock domain name：</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="normal">Normal</string>
    <string name="malfunction">Malfunction</string>
    <string name="still">Still</string>
    <string name="vibration">Vibration</string>
    <string name="discharge">Discharge</string>
    <string name="charge">Charge</string>
    <string name="word_status_and_lock_status">Working status: \n Lock state：</string>
    <string name="vibration_function">\nVibration function：</string>
    <string name="vibration_status">\nVibration status：</string>
    <string name="Charge_and_discharge_state">\nCharge and discharge state：</string>
    <string name="enter_battery">\nBattery：</string>
    <string name="gsm_state_off_power">\nGSM status: power off state</string>
    <string name="gsm_state_search_SIM">\nGSM Status: Query SIM card</string>
    <string name="gsm_state_register">\nGSM Status: Register the network</string>
    <string name="gsm_state_init_message">\nGSM Status: Initialize SMS function</string>
    <string name="gsm_state_search_gprs">\nGSM Status: Query GPRS network</string>
    <string name="gsm_state_connect_ppp">\nGSM Status: Link PPP</string>
    <string name="gsm_state_connect_tcp">\nGSM Status: Link TCP</string>
    <string name="gsm_state_communication">\nGSM Status: Successful communication with the platform</string>
    <string name="gsm_state_power_on">\nGSM status: powered on</string>
    <string name="gsm_state_malfunction">\nGSM status: fault</string>
    <string name="gprs_on_line_time">\nLast time on GPRS time:</string>
    <string name="gprs_signal_strength">\nLast GSM signal strength:</string>
    <string name="gps_state_off_power">\nGPS status: power off status</string>
    <string name="gps_state_unlocation">\nGPS status: Not positioned</string>
    <string name="gps_state_location">\nGPS Status: Positioning</string>
    <string name="gps_state_malfunction">\nGPS status: fault</string>
    <string name="gps_location_time">\nLast GPS positioning time:</string>
    <string name="gps_get_star_number">\nLast GPS number of stars:</string>
    <string name="result_string">设置还车</string>
</resources>
